# kokoro-ui

./: .dockerignore  .gitignore  Dockerfile  INSTRUCTIONS.md  LICENSE  README.md  app.py  main.py  pyproject.toml  requirements.txt  run.py
